@@ -4,16 +4,17 @@
  */
 package com.arjuna.ats.arjuna.coordinator;
 
-import com.arjuna.ats.arjuna.common.arjPropertyManager;
-
-import java.util.concurrent.*;
+import java.util.concurrent.Callable;
+import java.util.concurrent.CompletionService;
+import java.util.concurrent.ExecutorCompletionService;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
 import java.util.function.BiConsumer;
 import java.util.function.Function;
 
 public class TwoPhaseCommitThreadPool {
-    private static final int poolSize = arjPropertyManager.getCoordinatorEnvironmentBean().
-            getMaxTwoPhaseCommitThreads();
-    private static final ExecutorService executor = Executors.newFixedThreadPool(poolSize);
+    private static final ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
 
     public static String getExecutorClassName() {
         return executor.getClass().getName();
